[gd_scene load_steps=14 format=3 uid="uid://nkworfmivp77"]

[ext_resource type="Script" path="res://players/minion.gd" id="1_qubk3"]
[ext_resource type="Texture2D" uid="uid://52tkii5ed4an" path="res://assets/minion_worms.png" id="2_0bg1x"]
[ext_resource type="AudioStream" uid="uid://clug50d07lfl7" path="res://assets/sounds/bite1.wav" id="2_4eu7c"]
[ext_resource type="AudioStream" uid="uid://7dnlua5imsbf" path="res://assets/sounds/bite2.wav" id="3_ujghd"]
[ext_resource type="AudioStream" uid="uid://bl4mw6qq1yg6c" path="res://assets/sounds/bite3.wav" id="4_6roo0"]
[ext_resource type="AudioStream" uid="uid://bqdlqicv0j6nd" path="res://assets/sounds/bite4.wav" id="5_akwvy"]
[ext_resource type="AudioStream" uid="uid://b1gpeckn0u17h" path="res://assets/sounds/bite5.wav" id="6_8amy6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqwoj"]
size = Vector2(38, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_65tuj"]
atlas = ExtResource("2_0bg1x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crqfm"]
atlas = ExtResource("2_0bg1x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7jyd"]
atlas = ExtResource("2_0bg1x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2fa1c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65tuj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_crqfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7jyd")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ch15d"]
size = Vector2(38, 9)

[node name="Minion" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "navigation_agent")]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_qubk3")
sounds = Array[AudioStreamWAV]([ExtResource("2_4eu7c"), ExtResource("3_ujghd"), ExtResource("4_6roo0"), ExtResource("5_akwvy"), ExtResource("6_8amy6")])
sprite = NodePath("AnimatedSprite2D")
navigation_agent = NodePath("NavigationAgent2D")
interact_cooldown = 0.75

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19, 4.5)
shape = SubResource("RectangleShape2D_cqwoj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(19, -7)
sprite_frames = SubResource("SpriteFrames_2fa1c")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(19, 4.5)
shape = SubResource("RectangleShape2D_ch15d")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 5.0
avoidance_priority = 0.25

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0
pitch_scale = 2.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
